--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ h3{
     line-height: 19px;
 }
 .fon{
-    background-image: url(../images/bg2.png);
+    background-image: url(https://raw.githubusercontent.com/irina783/hata_newsletter/master/images/bg2.png);
     background-repeat: repeat;
 }
 h2{
